versión final se agrego unos alt que faltaban

--- a/pages/Integrantes.html
+++ b/pages/Integrantes.html
@@ -38,7 +38,7 @@
 
     <main class="integ">
             <h1 class="h1-int" data-aos="zoom-in">Integrantes De Imagine Dragons</h1>
-            <img src="/multimedia/grupo.webp"   class="imi" data-aos="zoom-in" alt="">
+            <img src="/multimedia/grupo.webp"   class="imi" data-aos="zoom-in" alt="integrantes de imagine dragons">
             <section class="secint" data-aos="zoom-in">
                 <img class="item" src="../multimedia/DAN.jpg" alt="imagen de Dan Reynolds">
                 <article class="car">
